update atividade semana 8

--- a/Programação/Semana 8/Atividade_ponderada_semana_8.ipynb
+++ b/Programação/Semana 8/Atividade_ponderada_semana_8.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-rCCXVwaN_Hy"
+      },
+      "source": [
+        "## Importação dos dados"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -16,7 +25,11 @@
         "import string\n",
         "from transformers import BertTokenizer\n",
         "import tensorflow as tf\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from transformers import TFDistilBertForSequenceClassification, DistilBertTokenizer\n",
+        "from tensorflow.keras.layers import Input, Dense, Dropout, Lambda\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.callbacks import EarlyStopping"
       ]
     },
     {
@@ -75,6 +88,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hEIpwIwvOmWP"
+      },
+      "source": [
+        "Aqui exploramos as primeiras linhas do dataset e verificamos as informações gerais, como os tipos de dados de cada coluna e a presença de valores nulos.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -86,6 +108,24 @@
         "df.head()  # Primeiras linhas do DataFrame\n",
         "df.info()  # Informações sobre os tipos de dados e valores nulos\n",
         "df.describe()  # Estatísticas descritivas das colunas numéricas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b6I6c1O8OCIT"
+      },
+      "source": [
+        "## Análise exploratória"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RiaM9dczOovg"
+      },
+      "source": [
+        "Nesta etapa, fazemos uma análise exploratória dos dados. Visualizamos a distribuição da variável alvo (Bot Label) e analisamos as distribuições de variáveis numéricas, como contagem de retweets, menções e seguidores em relação ao rótulo de bot.\n"
       ]
     },
     {
@@ -121,9 +161,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "CCXIhmVPJDQa"
       },
       "outputs": [],
@@ -164,12 +201,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qUulgVilOtXm"
+      },
+      "source": [
+        "Aqui realizamos o tratamento de valores ausentes, como a substituição de valores nulos na coluna de \"Hashtags\" e a conversão de datas na coluna \"Created At\". Além disso, normalizamos as colunas numéricas para que fiquem em uma mesma escala."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "CRykSIHDFg8D"
       },
       "outputs": [],
@@ -191,9 +234,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "8VN-MWvzFjY6"
       },
       "outputs": [],
@@ -218,25 +258,16 @@
         "id": "XN3uFPJMKXj9"
       },
       "source": [
-        "## Preparação dos dados para o modelo BERT"
+        "## Preparação e criação do modelo BERT"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "id": "TOhQ4ODhK_tC"
+        "id": "etD2gUcJOxBE"
       },
-      "outputs": [],
       "source": [
-        "import tensorflow as tf\n",
-        "from transformers import TFDistilBertForSequenceClassification, DistilBertTokenizer\n",
-        "from tensorflow.keras.layers import Input, Dense, Dropout\n",
-        "from tensorflow.keras.optimizers import Adam\n",
-        "from tensorflow.keras.callbacks import EarlyStopping"
+        "Nesta seção, preparamos os dados para serem usados no modelo BERT. Isso inclui a tokenização dos textos dos tweets e a divisão do dataset em conjuntos de treino e teste. Utilizamos apenas 10% dos dados para o treino."
       ]
     },
     {
@@ -280,7 +311,26 @@
         "\n",
         "# Convertendo para tensores\n",
         "train_dataset = tf.data.Dataset.from_tensor_slices((dict(train_encodings), y_train))\n",
-        "test_dataset = tf.data.Dataset.from_tensor_slices((dict(test_encodings), y_test))\n",
+        "test_dataset = tf.data.Dataset.from_tensor_slices((dict(test_encodings), y_test))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C7Iga1E_O3a_"
+      },
+      "source": [
+        "Nesta etapa, criamos o modelo BERT e adicionamos camadas extras, como `Dropout` e `Dense`, para melhorar a generalização do modelo. Em seguida, compilamos e treinamos o modelo usando Early Stopping.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZhuhDY5wO2UQ"
+      },
+      "outputs": [],
+      "source": [
         "\n",
         "# Definir as entradas corretamente\n",
         "input_ids = Input(shape=(128,), dtype=tf.int32, name=\"input_ids\")\n",
@@ -307,9 +357,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DbwWm5_TOMSR"
+      },
+      "source": [
+        "Treinamento do modelo"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "NYlv5fNYL329"
       },
       "outputs": [],
@@ -320,10 +382,37 @@
         "# Ajuste dos hiperparâmetros e treinamento\n",
         "model.fit(\n",
         "    train_dataset.batch(16),  # Certifique-se que o dataset está sendo carregado corretamente\n",
-        "    validation_data=test_dataset.batch(256),\n",
+        "    validation_data=test_dataset.batch(16),\n",
         "    epochs=5,  # Aumentei para 5 épocas\n",
         "    callbacks=[early_stopping]\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FJ5leqi7OgZ4"
+      },
+      "source": [
+        "## Análise do resultado"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BdJGA3QOO7k3"
+      },
+      "source": [
+        "Nesta última etapa, avaliamos o modelo no conjunto de teste e imprimimos as métricas de perda e acurácia."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pe_pJTesOQkj"
+      },
+      "source": [
+        "Avaliação das métricas"
       ]
     },
     {
@@ -337,34 +426,8 @@
         "# Avaliação do modelo\n",
         "loss, accuracy = model.evaluate(test_dataset.batch(16))\n",
         "print(f\"Loss: {loss}\")\n",
-        "print(f\"Accuracy: {accuracy}\")\n",
-        "\n",
-        "# Salvando o modelo treinado\n",
-        "model.save(\"/kaggle/working/bert_bot_detection_model.h5\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "K3oHPxBlKrdw"
-      },
-      "outputs": [],
-      "source": [
-        "# Avaliação do modelo\n",
-        "loss, accuracy = model.evaluate(test_dataset.batch(16))\n",
-        "print(f\"Loss: {loss}\")\n",
         "print(f\"Accuracy: {accuracy}\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4mpwOQt4NO3U"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
